# myPyUtils

./: .gitignore  CHANGELOG.md  README.md  TODO.md  config.yml  pyproject.toml  requirements.txt  setup.py
deepboard/: .sesskey  THEME.yml  compare_page.py  datagrid.py  main.py  requirements.txt  utils.py
deepboard/assets/: base.css  base.js  charts.css  compare.css  fileview.css  right_panel.css  theme.css
deepboard/components/: chart_type.py  legend.py  smoother.py
deepboard/right_panel/: __init__.py  cli.py  config.py  run_info.py  scalars.py  template.py
deepboard/static/: theme.css
docs/: Color.md  ConfigFile.md  Logger.md  Progress.md  README.md  Spinner.md
pyutils/: __init__.py  color.py  configFile.py  logger.py  progress.py  resultTable.py  spinner.py
src/pyutils/: color.py
